--- a/twilight-hammer/package.json
+++ b/twilight-hammer/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fluentui/react-components": "^9.54.7",
+    "@fluentui/react-components": "^9.54.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.0"
+    "react-i18next": "^15.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -23,11 +23,11 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "rc",
     "eslint-plugin-react-refresh": "^0.4.9",
     "prettier-eslint": "^16.3.0",
     "typescript": "^5.5.4",
-    "typescript-eslint": "8.0.0",
-    "vite": "^5.3.5"
+    "typescript-eslint": "8.0.1",
+    "vite": "^5.4.0"
   }
 }
