Use Nav in client demo

--- a/twilight/twilight.vcxproj.filters
+++ b/twilight/twilight.vcxproj.filters
@@ -53,4 +53,7 @@
     <None Include="packages.config" />
     <None Include=".gitignore" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natvis" />
+  </ItemGroup>
 </Project>
