Fix ESLint problems

--- a/twilight-hammer/tsconfig.json
+++ b/twilight-hammer/tsconfig.json
@@ -1,11 +1,10 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ]
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "jsx": "react-jsx",
+    "strict": true
+  },
+  "include": [ "**/*.ts", "**/*.tsx" ]
 }
