--- a/twilight-hammer/tsconfig.json
+++ b/twilight-hammer/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "jsx": "react-jsx",
-    "strict": true
-  },
-  "include": [ "**/*.ts", "**/*.tsx" ]
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
