--- a/twilight/twilight.vcxproj
+++ b/twilight/twilight.vcxproj
@@ -221,11 +221,14 @@ set NO_COLOR=1 &amp;&amp; npm run build -- --outDir $(TargetDir) --base ""</Comm
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="handlers.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="twilight.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="hello.cpp" />
+    <ClCompile Include="file.cpp" />
     <ClCompile Include="twilight.cpp" />
   </ItemGroup>
   <ItemGroup>
